<!--
  ~    Copyright 2016 The Crystal Rom Project
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_general">General</string>
    <string name="nav_display">Display</string>
    <string name="nav_recents">Recents</string>
    <string name="nav_statusbar">Status Bar</string>
    <string name="nav_physical_keys">Physical keys</string>
    <string name="nav_about_rom">About Crystal Rom</string>
    <string name="nav_about_developer">About the Developer</string>
    <string name="app_name" translatable="false">CrystalShards</string>
    <string name="updater_title">Updater</string>
    <string name="updater_show_changelog">Click me to see the changelog</string>
    <string name="changelog_title" translatable="false">Changelog</string>
    <string name="contributors_title">Contributors</string>
    <string name="build_section_title">Build Infos</string>
    <string name="maintenance_section_title">Maintenance</string>
    <string name="default_account_name">User</string>
    <string name="user_tile_category">User Tile Customization</string>
    <string name="user_tile_image_title">User Image</string>
    <string name="user_tile_name_title">User Name</string>
    <string name="user_tile_image_summary">Choose an Image</string>
    <string name="user_tile_name_summary">Choose a Name</string>
    <string name="user_tile_replace_title" translatable="false">Crystal Logo</string>
    <string name="user_tile_replace_summary">Replace icon with Crystal Rom Logo</string>
    <string name="crystal_version">Crystal Rom Version</string>
    <string name="crystal_codename">Crystal Rom Codename</string>
    <string name="crystal_branch">Crystal Rom Branch</string>
    <string name="crystal_api">Crystal Rom API Level</string>
    <string name="crystal_flavour">Crystal Rom Flavour</string>
    <string name="default_crystal_version">Unknown</string>
    <string name="default_crystal_codename">X</string>
    <string name="default_crystal_branch">Unknown</string>
    <string name="default_crystal_api">Unknown</string>
    <string name="default_crystal_flavour">SHATTERED</string>
    <string name="recents_fab_title">Floating Action Button for Recents</string>
    <string name="recents_fab_description">Use FAB instead stock \'clean all\' button for recents</string>
    <string name="header_title" translatable="false">CrystalShards</string>
    <string name="header_description" translatable="false">MOD ME.</string>
    <string name="about_rom_desc" translatable="false"><b>About The Crystal Rom Project:</b>\n\n The idea of Crystal Rom born in late 2013. Thinking of a rom different from others at the time. Noticing that every rom has quite the same features of the others, I thought that if I created one, it should had a few but useful features.\n Thus, its effective implementation started on <b>9 Oct 2015</b> by making its initial base application: <b>Y.A.M.P.: Yet Another Music Player</b>, now the default music application. Then also other apps followed it, like the file manager, camera app, note and todo. Minor work has been done with aosp 6.0.1\'s source code, nothing relevant, with aosp 7.1 source code I started making a \'home\' for the main tweaks.</string>
    <string name="about_dev_desc" translatable="false"><b>About the developer:</b>\n\n Okay, first of all, before you start asking \'Eskilop\' is a totally invented name, not based on anything. I was an android enthusiast, I started my \'developer\' path making some applications, not that useful, but.. I was (and am) a modder, I started modding with my first phone: Samsung Galaxy Next Turbo (GT-S5570I) not my choice, in fact my parents gifted it to me, there weren\'t so much roms (pretty obvious) but then androidarmv6 team made a cm11 port for it and in that precise moment I started to \'study\' what exactly they done to have that cm-11-stuff.zip that made my phone so \'new\'. I started documenting how to build the Cyanogenmod for the GT-S5570I and i made it, after one week I was able to install my compiled version of the cm11. But I had no intenction to stop there, because I am very curious, so I started making some little (very little and irrilevant) changes to the easter-egg.</string>
    <string name="scrot_type_title">Screenshot type</string>
    <string name="scrot_type_description">Use either partial or system default screenshot</string>
    <string name="scrot_type_default_summary">System Default</string>
    <string name="scrot_type_partial_summary">Partial Screenshot</string>
    <string name="volume_switch_track_title">Switch track</string>
    <string name="volume_switch_track_summary">Switch track by longpressing volume buttons while in lockscreen</string>
    <string name="nav_miscellaneous">Miscellaneous</string>
    <string name="category_links">Useful Links</string>
    <string name="links_mainsite_title">Main Website</string>
    <string name="links_mainsite_summary">See Rom\'s official website</string>
    <string name="links_gpluscommunity_title" translatable="false">Google Plus Community</string>
    <string name="llinks_gpluscommunity_summary">Exchange ideas and find other Crystal Rom users</string>
    <string name="links_telegramchannel_title">Crystal Rom\'s Channel</string>
    <string name="links_telegramchannel_summary">Get the latest news in seconds with Crystal Rom\'s official telegram channel</string>
    <string name="links_telegramgroup_title">Crystal Rom\'s Discussion Group</string>
    <string name="links_telegramgroup_summary">Discuss with other Crystal Rom fellows in the official discussion group</string>
    <string name="links_wiki_title">Crystal Rom\'s Wiki</string>
    <string name="links_wiki_summary">Official Crystal Rom\'s wiki page</string>
    <string name="misc_infos">General Informations</string>
    <string name="misc_infos_summary">Acquamarine 1.0.0 (alpha)</string>
    <string name="misc_report">Bug Reporter</string>
    <string name="misc_report_summary">Report a bug to the developer</string>
    <string name="statistics_title">Statistics Informations</string>
    <string name="switch_diagnostic_infos">Send Statistic Informations</string>
    <string name="switch_statistic_infos_default">Send statistic informations to Crystal Rom</string>
    <string name="dont_send_stats">Don\'t send</string>
    <string name="send_stats">Send Stats</string>
    <string name="category_statistics_preview">Statistics informations preview</string>
    <string name="infos_uid_title" translatable="false">Crystal UID</string>
    <string name="infos_device_title">Device</string>
    <string name="infos_crystal_version">Crystal Version</string>
    <string name="infos_crystal_codename">Crystal Codename</string>
    <string name="infos_crystal_branch">Crystal Branch</string>
    <string name="infos_crystal_api_level">Crystal API Level</string>
    <string name="infos_crystal_flavour">Crystal Flavour</string>
</resources>
