<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2016 The Crystal Rom Project
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/misc_infos"
                      android:summary="@string/misc_infos_summary"
                      android:key="crystal_info"
                      android:icon="@drawable/ic_crystal_acquamarine"/>
    <PreferenceScreen android:title="@string/misc_report"
                      android:summary="@string/misc_report_summary"
                      android:key="report_bug"
                      android:icon="@drawable/bug_icon"/>
    <PreferenceScreen android:key="key_info_stats"
                      android:title="@string/statistics_title"
                      android:enabled="true">
        <intent android:targetPackage="it.eskilop.crystalshards"
                android:targetClass="it.eskilop.crystalshards.activities.StatisticInfosActivity"/>
    </PreferenceScreen>
    <PreferenceCategory
        android:title="@string/category_links">
        <PreferenceScreen android:title="@string/links_mainsite_title"
                          android:summary="@string/links_mainsite_summary"
                          android:icon="@drawable/web_icon">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/HCyvVm"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/links_wiki_title"
                          android:summary="@string/links_wiki_summary"
                          android:icon="@drawable/wikipedia_icon">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/EkIFkv"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/links_gpluscommunity_title"
                          android:summary="@string/llinks_gpluscommunity_summary"
                          android:icon="@drawable/google_plus_icon">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://goo.gl/OfyHW9"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/links_telegramchannel_title"
                          android:summary="@string/links_telegramchannel_summary"
                          android:icon="@drawable/telegram_icon">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/qy79pD"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/links_telegramgroup_title"
                          android:summary="@string/links_telegramgroup_summary"
                          android:icon="@drawable/telegram_icon">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/TzK2JF"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>