<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2016 The Crystal Rom Project
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:key="key_infos_stats_switch"
                      android:title="@string/statistics_title"
                      android:enabled="true"
                      android:checked="true" />
    <PreferenceCategory android:title="@string/category_statistics_preview">
        <PreferenceScreen android:key="key_infos_crystal_uid"
                          android:title="@string/infos_uid_title"/>
        <PreferenceScreen android:key="key_infos_crystal_device"
                          android:title="@string/infos_device_title"/>
        <PreferenceScreen android:key="key_infos_crystal_version"
                          android:title="@string/infos_crystal_version"/>
        <PreferenceScreen android:key="key_infos_crystal_codename"
                          android:title="@string/infos_crystal_codename"/>
        <PreferenceScreen android:key="key_infos_crystal_branch"
                          android:title="@string/crystal_branch"/>
        <PreferenceScreen android:key="key_infos_crystal_api_level"
                          android:title="@string/infos_crystal_api_level"/>
        <PreferenceScreen android:key="key_infos_crystal_flavour"
                          android:title="@string/infos_crystal_flavour"/>
    </PreferenceCategory>
</PreferenceScreen>