<?xml version="1.0" encoding="utf-8"?>

<!--
     Copyright (C) 2016 Crystal Rom
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/user_tile_category">
        <PreferenceScreen
            android:key="user_image"
            android:enabled="true"
            android:title="@string/user_tile_image_title"
            android:summary="@string/user_tile_image_summary" />
        <EditTextPreference
            android:key="user_name"
            android:enabled="true"
            android:title="@string/user_tile_name_title"
            android:summary="@string/user_tile_name_summary" />
        <SwitchPreference
            android:key="replace_with_logo"
            android:enabled="true"
            android:title="@string/user_tile_replace_title"
            android:summary="@string/user_tile_replace_summary" />
    </PreferenceCategory>
</PreferenceScreen>
